# SwinDocSegmenter-tests

./: README.md  config_doclay.yaml  config_prima.yaml  make.sh  pyproject.toml  test.py
