[project]
name = "test-swin"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
  { name = "Federico Simonetta", email = "22996003+00sapo@users.noreply.github.com" },
]
dependencies = [
    "torch>=2.1.2",
    "detectron2 @ git+https://github.com/facebookresearch/detectron2.git",
    "torchvision>=0.16.2",
    "timm>=0.9.12",
    "opencv-python>=4.9.0.80",
    "scipy>=1.11.4",
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
package-type = "library"

[tool.pdm.scripts]
post-install = "sh make.sh"

[tool.pdm.options]
add = ["--no-isolation", "--no-self"]

[tool.pdm.dev-dependencies]
dev = [
    "ipdb>=0.13.13",
]
